--- a/myproject/requirements.txt
+++ b/myproject/requirements.txt
@@ -1,2 +1,17 @@
 Django==1.11.6
+dj-database-url==0.4.2
+dj-static==0.0.6
+django-angular==1.1.3
+django-crispy-forms==1.6.1
+django-tables2==1.11.0
+django-toolbelt==0.0.1
+djangorestframework==3.6.4
+gunicorn==19.7.1
+psycopg2==2.7.3.1
 pytz==2017.2
+six==1.11.0
+South==1.0.2
+static3==0.7.0
+virtualenv==15.1.0
+virtualenvwrapper-win==1.2.2
+whitenoise==3.3.0
